# kiss-fft

./: CHANGELOG  CMakeLists.txt  LICENSE  Makefile  README.md  TIPS  _kiss_fft_guts.h  kiss_fft.c  kiss_fft.cpp  kiss_fft.h  kiss_fftr.c  kiss_fftr.cpp  kiss_fftr.h  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
jnifft/: CMakeLists.txt  build.gradle
jnifft/src/androidTest/java/uk/me/berndporr/kiss_fft/: BenchTest.java  BenchmarkTest.java  FFTRTest.java  FFTTest.java  LoadTest.java
jnifft/src/main/: AndroidManifest.xml
jnifft/src/main/cpp/: kiss-fft-lib.cpp
jnifft/src/main/java/uk/me/berndporr/kiss_fft/: KISSFastFourierTransformer.java
jnifft/src/main/res/values/: strings.xml
test/: Makefile  benchkiss.c  test_real.c  testkiss.py  twotonetest.c
tools/: Makefile  kfc.c  kiss_fastconv.c  kiss_fastfir.c  psdpng.c
